// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders correctly 1`] = `
<div
  className="   fade"
>
  <div>
    <p>
      Hi
    </p>
  </div>
</div>
`;

exports[`Card renders visible cards 1`] = `
<div
  className="   "
>
  <div>
    <p>
      Hi
    </p>
  </div>
</div>
`;
